--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,10 @@ theme:
   features:
     - navigation.tabs
 
+markdown_extensions:
+  - attr_list
+  - md_in_html
+
 nav:
   - 首页: index.md
   - 基本概念:
