--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,8 +53,17 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+  - pymdownx.arithmatex:
+      generic: true
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
 
 nav:
   - 首页: index.md
   - 基本概念:
-      - 平稳性: concepts/stationary.md
+    - 预测的统计学观点: concepts/statistical-perspective.md
+    - 平稳性: concepts/stationary.md
